udpate code to make valid request

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,9 +1,14 @@
+body {
+  background-color: lightgray;
+}
+
 .form-inline {
   .inline-group {
     width: 33%;
   }
 }
 
-.order-confirmation {
-  
+.masthead, .featurette {
+  height: 150px;
+  width: 100%;
 }
