--- a/app/views/orders/create.js.erb
+++ b/app/views/orders/create.js.erb
@@ -1,4 +1,4 @@
-<% if @order.valid? %>
+<% if @order.valid? && @errors.nil? %>
   $('#checkout').html("<%=j render partial: 'success' %>")
 <% else %>
   $('#errors').html("<%=j render partial: 'fail' %>")
