--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,28 +5,37 @@
 </div>
 
 <div class="featurette">
-  
+
 </div>
 
 <div id="checkout">
   <div id="errors" class="bg-danger"></div>
-  <%= form_for @order, remote: true, method: :post, :html => { multipart: true, role: 'form', class: 'col-md-8' } do |f| %>
-    <div>
-      <h3>Amount</h3>
-      <%= f.label :amount, '$1', value: 1 %>
-      <%= f.radio_button :amount, 1 %>
+  <%= form_for @order, remote: true, method: :post, :html => { multipart: true, role: 'form', class: 'checkout-form center-box' } do |f| %>
+    <div class="amount-box">
+      <div class="radio-buttons">
+      <b class="radio-buttons-main-label">Amount: </b>
+        <%= f.label :amount, '$1', value: 1 %>
+        <%= f.radio_button :amount, 1 %>
 
-      <%= f.label :amount, '$2', value: 2 %>
-      <%= f.radio_button :amount, 2 %>
+        <%= f.label :amount, '$2', value: 2 %>
+        <%= f.radio_button :amount, 2 %>
 
-      <%= f.label :amount, '$5', value: 5 %>
-      <%= f.radio_button :amount, 5, checked: true %>
+        <%= f.label :amount, '$5', value: 5 %>
+        <%= f.radio_button :amount, 5, checked: true %>
 
-      <%= f.label :amount, '$10', value: 10 %>
-      <%= f.radio_button :amount, 10 %>
+        <%= f.label :amount, '$10', value: 10 %>
+        <%= f.radio_button :amount, 10 %>
+      </div>
     </div>
     <br/>
 
+    <div class="form-group">
+      <%= f.text_field :name, placeholder: 'Name', class: 'form-control'  %>
+    </div>
+
+    <div class="form-group">
+      <%= f.text_field :email, placeholder: 'Email', class: 'form-control'  %>
+    </div>
     <%= f.fields_for :shipping_address do |s| %>
       <div class="form-group">
         <%= s.text_field :address_line_1, placeholder: 'Address Line 1', class: 'form-control' %>
@@ -40,6 +49,6 @@
         <%= s.text_field :zip_code, placeholder: 'Zip Code', prompt: 'State', class: 'form-control' %>
       </div>
     <% end %>
-    <%= f.submit 'Submit', class: 'btn btn-primary' %>
+    <%= f.submit 'Submit', class: 'btn btn-primary center-box', data: { disable_with: 'Submitting...' } %>
   <% end %>
 </div>
