--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,16 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div class="navbar">
+  <a href="/"><h1 class="animation-hinge">Bitcrap</h1></a>
+</div>
+
 <div class="container">
   <%= yield %>
+</div>
+
+<div class="footer">
+  A MaiCoin Project
 </div>
 </body>
 </html>
