--- a/app/views/orders/_success.html.erb
+++ b/app/views/orders/_success.html.erb
@@ -35,4 +35,5 @@
     </tr>
   </table>
   <%= link_to 'Pay with Bitcoin', @checkout.checkout_url, target: '_blank', class: "btn center-box animation-pulse-color" %>
+  <%= link_to 'Start Over', '/', class: 'center-box start-over' %>
 </div>
