--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,54 +1,64 @@
+
 <div class="masthead">
-  <h1>Bitcrap</h1>
-  <p>Pay a small amount of Bitcoin and receive a fun, surprise gift in the mail</p>
-  <p>You won't know ahead of time what you are going to get. We try to make the gifts fun and entertaining</p>
+  <p>Are you tired of knowing what you're going to get when you buy something?</p>
+  <p>Well, here at Bitcrap we are dedicated to solving this problem. Stop wasting your time CHOOSING products to purchase on sites like Amazon (laaammee) and Overstock (more like wasting-my-time-stock).</p>
 </div>
 
 <div class="featurette">
-
+  <div class="sub-featurette">
+    <p>1. Select Amount to spend <br/> (The higher the amount, the cooler the gift)</p>
+  </div>
+  <div class="sub-featurette">
+    <p>2. Enter your contact and shipping information</p>
+  </div>
+  <div class="sub-featurette">
+    <p>3. Pay with Bitcoin and wait for your package in the mail</p>
+  </div>
 </div>
 
-<div id="checkout" class="center-box">
-  <%= form_for @order, remote: true, method: :post, :html => { multipart: true, role: 'form', class: 'checkout-form' } do |f| %>
-    <div id="errors" class="errors"></div>
-    <div class="amount-box">
-      <div class="radio-buttons">
-      <b class="radio-buttons-main-label">Amount: </b>
-        <%= f.label :amount, '$1', value: 1 %>
-        <%= f.radio_button :amount, 1 %>
+<div class="checkout-row">
+  <div id="checkout" class="center-box">
+    <%= form_for @order, remote: true, method: :post, :html => { multipart: true, role: 'form', class: 'checkout-form' } do |f| %>
+      <div id="errors" class="errors"></div>
+      <div class="amount-box">
+        <div class="radio-buttons">
+        <b class="radio-buttons-main-label">Amount: </b>
+          <%= f.label :amount, '$1', value: 1 %>
+          <%= f.radio_button :amount, 1 %>
 
-        <%= f.label :amount, '$2', value: 2 %>
-        <%= f.radio_button :amount, 2 %>
+          <%= f.label :amount, '$2', value: 2 %>
+          <%= f.radio_button :amount, 2 %>
 
-        <%= f.label :amount, '$5', value: 5 %>
-        <%= f.radio_button :amount, 5, checked: true %>
+          <%= f.label :amount, '$5', value: 5 %>
+          <%= f.radio_button :amount, 5, checked: true %>
 
-        <%= f.label :amount, '$10', value: 10 %>
-        <%= f.radio_button :amount, 10 %>
+          <%= f.label :amount, '$10', value: 10 %>
+          <%= f.radio_button :amount, 10 %>
+        </div>
       </div>
-    </div>
-    <br/>
+      <br/>
 
-    <div class="form-group">
-      <%= f.text_field :name, placeholder: 'Name', class: 'form-control'  %>
-    </div>
-
-    <div class="form-group">
-      <%= f.text_field :email, placeholder: 'Email', class: 'form-control'  %>
-    </div>
-    <%= f.fields_for :shipping_address do |s| %>
       <div class="form-group">
-        <%= s.text_field :address_line_1, placeholder: 'Address Line 1', class: 'form-control' %>
+        <%= f.text_field :name, placeholder: 'Name', class: 'form-control'  %>
       </div>
+
       <div class="form-group">
-        <%= s.text_field :address_line_2, placeholder: 'Address Line 2', class: 'form-control' %>
+        <%= f.text_field :email, placeholder: 'Email', class: 'form-control'  %>
       </div>
-      <div class="form-group form-inline">
-        <%= s.text_field :city, placeholder: 'City', class: 'form-control' %>
-        <%= s.select :state, options_for_select(us_states), { prompt: 'Select State' }, class: 'form-control' %>
-        <%= s.text_field :zip_code, placeholder: 'Zip Code', prompt: 'State', class: 'form-control' %>
-      </div>
+      <%= f.fields_for :shipping_address do |s| %>
+        <div class="form-group">
+          <%= s.text_field :address_line_1, placeholder: 'Address Line 1', class: 'form-control' %>
+        </div>
+        <div class="form-group">
+          <%= s.text_field :address_line_2, placeholder: 'Address Line 2', class: 'form-control' %>
+        </div>
+        <div class="form-group form-inline">
+          <%= s.text_field :city, placeholder: 'City', class: 'form-control' %>
+          <%= s.select :state, options_for_select(us_states), { prompt: 'Select State' }, class: 'form-control' %>
+          <%= s.text_field :zip_code, placeholder: 'Zip Code', prompt: 'State', class: 'form-control' %>
+        </div>
+      <% end %>
+      <%= f.submit 'Submit', class: 'btn btn-primary center-box', data: { disable_with: 'Submitting...' } %>
     <% end %>
-    <%= f.submit 'Submit', class: 'btn btn-primary center-box', data: { disable_with: 'Submitting...' } %>
-  <% end %>
+  </div>
 </div>
