update Gemfile and views

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -25,17 +25,22 @@
     <h3>Winston Churchill</h3>
     <em class="location">London, England</em>
     <p>
-      "Never has my wench so desired a gift as the one I bought her from Bitcrap."
+      "Never has my wench so appreciated a gift as the one I bought her from Bitcrap."
     </p>
     <h3>Vladamir Putin</h3>
     <em class="location">Moscow, Russia</em>
     <p>
-      "I can fly women in from all over the world, I have had tigers as pet, but nothing excites me more than receiving my gift from Bitcrap."
+      "I can fly women in from all over the world, I have tigers as pets, but nothing excites me more than receiving a gift from Bitcrap."
     </p>
     <h3>George Washington</h3>
     <em class="location">Washington, D.C.</em>
     <p>
       "They say I never lied, but I once stole some Bitcoin from my mother's purse just to buy some Bitcrap."
+    </p>
+    <h3>Michael Moore</h3>
+    <em class="location">Washington, D.C.</em>
+    <p>
+      "I hate Bitcrap. They never send me anything edible."
     </p>
   </div>
   <div id="checkout" class="checkout-box">
