--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,8 +17,8 @@
     <%= image_tag 'box_question_mark.jpg' %>
 
     <h2>Customer Testimonials</h2>
-    <h3>Mao Zedong</h3>
-    <em class="location">Beijing, China</em>
+    <h3>Vladimir Lenin</h3>
+    <em class="location">Moscow, Russia</em>
     <p>
       "Communism would have worked if Bitcrap was around because everyone would be happy spending the little money they got."
     </p>
