--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,6 +17,11 @@
     <%= image_tag 'box_question_mark.jpg' %>
 
     <h2>Customer Testimonials</h2>
+    <h3>George Washington</h3>
+    <em class="location">Washington, D.C.</em>
+    <p>
+      "They say I never lied, but I once stole Bitcoin from my mother's purse just to buy some Bitcrap."
+    </p>
     <h3>Vladimir Lenin</h3>
     <em class="location">Moscow, Russia</em>
     <p>
@@ -27,20 +32,15 @@
     <p>
       "Never has my wench so appreciated a gift as the one I bought her from Bitcrap."
     </p>
-    <h3>Vladamir Putin</h3>
-    <em class="location">Moscow, Russia</em>
-    <p>
-      "I can fly women in from all over the world, I have tigers as pets, but nothing excites me more than receiving a gift from Bitcrap."
-    </p>
-    <h3>George Washington</h3>
-    <em class="location">Washington, D.C.</em>
-    <p>
-      "They say I never lied, but I once stole some Bitcoin from my mother's purse just to buy some Bitcrap."
-    </p>
     <h3>Michael Moore</h3>
     <em class="location">Washington, D.C.</em>
     <p>
       "I hate Bitcrap. They never send me anything edible."
+    </p>
+    <h3>Vladimir Putin</h3>
+    <em class="location">Moscow, Russia</em>
+    <p>
+      "I can fly women in from all over the world, I have tigers as pets, but nothing excites me more than receiving a gift from Bitcrap."
     </p>
   </div>
   <div id="checkout" class="checkout-box">
