--- a/app/views/orders/return.html.erb
+++ b/app/views/orders/return.html.erb
@@ -1,3 +1,5 @@
 <h3>Thank you for your order <%= @order.try(:name) %></h3>
+<h3>Your order status is currently: <%= @order.try(:status) %></h3>
+<h3>Refresh this page to see the updated status</h3>
 <h3>An email has been sent to <%= @order.try(:email) %></h3>
 <p>If you did not get an email, please contact customer service</p>
