--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
     <a href="/"><h1 class="animation-hinge">Bitcrap</h1></a>
   </div>
   <div class="tagline masthead-box">
-    <h2>The Store of the Future</h2>
+    <h2 class="hide_mobile">The Store of the Future</h2>
   </div>
 </div>
 
