--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,9 @@
 
 <div class="container">
   <%= yield %>
-</div>
-
-<div class="footer">
-  A MaiCoin Project
+  <div class="footer">
+    &copy; 2014 &nbsp; <a href="http://alexleishman.com" class="underline">Alexander Leishman</a>
+  </div>
 </div>
 </body>
 </html>
