--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -15,7 +15,6 @@ body {
   background-color: white;
   font-size: 14px;
   font-family: 'Lato', sans-serif;
-  padding-top: 60px;
 }
 
 // utilities
@@ -33,11 +32,9 @@ body {
   text-decoration: underline;
 }
 
-
 // General
 
 .navbar, .footer {
-  // background-color: #222;
   color: #FFF;
   width: 100%;
   text-align: center;
@@ -53,6 +50,7 @@ body {
 }
 
 .footer {
+  position: relative;
   bottom: 0;
   color: black;
 }
@@ -97,7 +95,7 @@ body {
 
 .main-container {
   padding: 20px;
-  margin: 0 0 30px 0;
+  margin: 0 0 50px 0;
 
   h3 {
     margin-bottom: 0;
@@ -130,9 +128,19 @@ body {
   }
 
   .directions {
-    padding: 10px 20px;
+    padding: 5px 10px;
     margin-bottom: 10px;
     background-color: #EEE;
+  }
+
+  .directions-list {
+    font-size: 16px;
+
+    li {
+      margin-left: -14px;
+      padding: 5px 0;
+    }
+
   }
 }
 
@@ -206,12 +214,7 @@ body {
   }
 }
 
-
 // lists
-
-ul {
-  list-style: none;
-}
 
 // tables
 
