add some helpers, mailer, update controller logic

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,15 @@
 </div>
 
 <div class="container">
+  <div class="masthead">
+    <div class="logo masthead-box">
+      <a href="/"><h1 class="animation-hinge">Bitcrap</h1></a>
+    </div>
+    <div class="tagline masthead-box">
+      <h2 class="hide_mobile">The Store of the Future</h2>
+    </div>
+  </div>
+
   <%= yield %>
   <div class="footer">
     &copy; 2014 &nbsp; <a href="http://alexleishman.com" class="underline">Alexander Leishman</a>
