--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,17 +1,9 @@
 
-<div class="masthead">
-  <div class="logo masthead-box">
-    <a href="/"><h1 class="animation-hinge">Bitcrap</h1></a>
-  </div>
-  <div class="tagline masthead-box">
-    <h2 class="hide_mobile">The Store of the Future</h2>
-  </div>
-</div>
-
 <div class="main-container">
   <div class="business-description">
     <h2>Tired of knowing what you're buying? We can help!</h2>
     <h3>Pay Between $1 and $10 (in Bitcoin) and receive a fun, surprise gift in the mail.</h3>
+    <h4>Receiver will get a brand new product that is useful or fun.</h4>
   </div>
   <div class="showcase">
     <%= image_tag 'box_question_mark.jpg' %>
@@ -23,7 +15,7 @@
       "They say I never lied, but I once stole Bitcoin from my mother's purse just to buy some Bitcrap."
     </p>
     <h3>Vladimir Lenin</h3>
-    <em class="location">Moscow, Russia</em>
+    <em class="location">Москва, Россия</em>
     <p>
       "Communism would have worked if Bitcrap was around because everyone would be happy spending the little money they got."
     </p>
@@ -33,12 +25,12 @@
       "Never has my wench so appreciated a gift as the one I bought her from Bitcrap."
     </p>
     <h3>Michael Moore</h3>
-    <em class="location">Washington, D.C.</em>
+    <em class="location">Micronesia</em>
     <p>
       "I hate Bitcrap. They never send me anything edible."
     </p>
     <h3>Vladimir Putin</h3>
-    <em class="location">Moscow, Russia</em>
+    <em class="location">Владивосток, Россия</em>
     <p>
       "I can fly women in from all over the world, I have tigers as pets, but nothing excites me more than receiving a gift from Bitcrap."
     </p>
