--- a/app/views/orders/cancel.html.erb
+++ b/app/views/orders/cancel.html.erb
@@ -1,2 +1,2 @@
-<h3>The order for <%= @order.try(:name) %> has been cancelled</h3>
+<h3>Your order has been cancelled</h3>
 Thank you for trying it out!!
