--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Bitcrap</title>
+  <title>Bitcrap - The store of the future</title>
+  <meta name="description" content="Buy random mail order gifts with Bitcoin."
+  <meta charset="utf-8">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
-<div class="navbar">
-</div>
+  <body>
+    <div class="container">
+      <div class="masthead">
+        <div class="logo masthead-box">
+          <a href="/"><h1 class="animation-hinge">Bitcrap</h1></a>
+        </div>
+        <div class="tagline masthead-box">
+          <h2 class="hide_mobile">The Store of the Future</h2>
+        </div>
+      </div>
 
-<div class="container">
-  <div class="masthead">
-    <div class="logo masthead-box">
-      <a href="/"><h1 class="animation-hinge">Bitcrap</h1></a>
+      <%= yield %>
+      <div class="footer">
+        &copy; 2014 &nbsp; Bitcrap, Inc.</a>
+      </div>
     </div>
-    <div class="tagline masthead-box">
-      <h2 class="hide_mobile">The Store of the Future</h2>
-    </div>
-  </div>
-
-  <%= yield %>
-  <div class="footer">
-    &copy; 2014 &nbsp; <a href="http://alexleishman.com" class="underline">Alexander Leishman</a>
-  </div>
-</div>
-</body>
+  </body>
 </html>
